# A-Maze-ing

./: A-Maze-Ing.py  Makefile  README.md  a_maze_ing.py  config.txt  file.c  get_config.py  hell.txt  maze.txt  output_file.txt  output_maze.txt  prime_algo.py  pyproject.toml
Maze/: new_Maze.py  understanding.py
mazegen/: __init__.py  generator.py  generator2.py  get_config.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt
